# VI-Project

./: .clang-format  .clangd  CMakeLists.txt  README.md  justfile
docs/: diagrams.md  nvidia-flip-practical.md  texture-mapping-practical.md
scenes/: README.md  cornell-box.gltf
scenes/Lantern/: README.md
scenes/Sponza/: README.md
src/: main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Image/: Denoiser.cpp  Denoiser.hpp  FileImages.cpp  FileImages.hpp  Image.hpp
src/Light/: Light.hpp
src/Log/: Log.hpp
src/Math/: DiscreteDistribution.cpp  DiscreteDistribution.hpp  Math.cpp  Math.hpp  RGB.hpp  Random.cpp  Random.hpp  Vector.hpp
src/Primitive/: BRDF.cpp  BRDF.hpp  BoundingBox.hpp  Material.hpp  Primitive.hpp
src/Primitive/AccelerationStructures/: AccelerationStructure.hpp  GridAccelerationStructure.cpp  GridAccelerationStructure.hpp
src/Primitive/Geometry/: Geometry.cpp  Geometry.hpp  Mesh.cpp  Mesh.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/Ray/: Intersection.hpp  Ray.hpp
src/Renderer/: DummyRenderer.hpp  Renderer.hpp
src/Scene/: GltfSceneBuilder.cpp  Scene.cpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp
src/Shaders/: AmbientShader.cpp  AmbientShader.hpp  DirectIllumination.cpp  DirectIllumination.hpp  DummyShader.hpp  PathTracingShader.cpp  PathTracingShader.hpp  Shader.hpp  VeachShader.cpp  VeachShader.hpp  WhittedShader.cpp  WhittedShader.hpp
src/Utils/: ProgressBar.cpp  ProgressBar.hpp  Util.hpp
tools/: rt_build_visualizer.py  rt_trace_visualizer.py
